firefox-trunk (11.0~a1~hg20111220r83015-0ubuntu2) UNRELEASED; urgency=low

  * Keep the firefox-kde-support suggest on releases older than precise
    for now
    - update debian/rules
  * Ensure that we suggest kmozillahelper on lucid
    - update debian/rules
  * Ensure that we replace kubuntu-firefox-installer on lucid
    - update debian/rules

 -- Chris Coulson <chris.coulson@canonical.com>  Thu, 22 Dec 2011 23:18:48 +0000

firefox-trunk (11.0~a1~hg20111220r83015-0ubuntu1) precise; urgency=low

  * New upstream snapshot v11.0 A1 HG20111220R83015

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 2.5 prerelease r270
  * Turn off the one-time addon selection dialog (LP: #888307)
    - update debian/vendor.js
  * Ensure we include locales in the tarball if they are in shipped-locales
    but not in all-locales
    - update debian/build/create-tarball.py
  * Update after landing of bmo: #701875 - Rename omni.jar to omni.ja
    - update debian/firefox.install.in
  * Ensure that the crash reporter is disabled if rebuilt by Ubuntu
    derivatives, as there will be no crash symbols for those
    - update debian/rules
  * Only add "Ubuntu" to the UA string when being built for Ubuntu
    - update debian/rules
  * Drop obsolete Debian menu file
    - remove debian/firefox.menu.in
    - don't create a 32x32 xpm icon in debian/rules
    - drop the imagemagick build-depend in debian/control
  * Temporarily disable ipdl tests due to build failures. These aren't
    enabled upstream, anyway
    - update debian/config/mozconfig.in
  * Don't install the libxul pkgconfig file in precise. Mozvoikko doesn't
    need this anymore
    - update debian/rules
    - update debian/firefox-dev.install.in
  * Always set the update channel - not setting it at build-time on release
    builds breaks the extensions.checkCompatibility pref. The only things
    using it at runtime are nsBlocklistService, Test Pilot (beta + aurora)