@@ -7,8 +7,10 @@ firefox-trunk (11.0~a1~hg20111220r83015-0ubuntu2) UNRELEASED; urgency=low
     - update debian/rules
   * Ensure that we replace kubuntu-firefox-installer on lucid
     - update debian/rules
+  * Disable the tests on powerpc, because it sucks too much to run them
+    - update debian/rules
 
- -- Chris Coulson <chris.coulson@canonical.com>  Thu, 22 Dec 2011 23:18:48 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Fri, 23 Dec 2011 14:43:23 +0000
 
 firefox-trunk (11.0~a1~hg20111220r83015-0ubuntu1) precise; urgency=low
 
